[package]
name = "file-commands"
version = "0.1.0"
authors = ["Shrikar Vasisht <svasisht@umd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
structopt = { version = "0.3", default-features = false }
chrono = "0.4"
libc = "0.2"
